Fixing BLD cases on mobile and ensuring comp mode mobile taps are full screen

--- a/src/components/TimerComponent/TimerComponent.scss
+++ b/src/components/TimerComponent/TimerComponent.scss
@@ -147,8 +147,8 @@
         overflow-y: auto;
     }
     .timer__comp-mode {
-        width: 80%;
-        left: 10%;
+        height: 100%;
+        width: 100%;
     }
 }
 
